[package]
name = "datapack_common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
command_parser = { git = "https://github.com/Inky-developer/command-parser" }
itertools = "*"
rustc-hash = "1.1"